--- a/package.json
+++ b/package.json
@@ -4,31 +4,35 @@
   "version": "1.0.3",
   "author": "Takaya Yamazato",
   "dependencies": {
-    "bulma": "^0.9.3",
-    "gatsby": "^3.10.2",
-    "gatsby-image": "^3.10.0",
-    "gatsby-plugin-image": "^1.10.1",
-    "gatsby-plugin-netlify": "^3.10.0",
-    "gatsby-plugin-netlify-cms": "^5.10.0",
+    "bulma": "^0.9.2",
+    "gatsby": "^3.5.0",
+    "gatsby-image": "^3.1.0",
+    "gatsby-plugin-image": "^1.1.2",
+    "gatsby-plugin-google-analytics": "^3.1.0",
+    "gatsby-plugin-netlify": "^3.1.0",
+    "gatsby-plugin-netlify-cms": "^5.1.0",
     "gatsby-plugin-purgecss": "^6.0.2",
-    "gatsby-plugin-react-helmet": "^4.10.0",
-    "gatsby-plugin-sass": "^4.10.0",
-    "gatsby-plugin-sharp": "^3.10.2",
+    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-sass": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-remark-copy-linked-files": "^4.7.0",
-    "gatsby-remark-images": "^5.7.0",
+    "gatsby-remark-images": "^4.1.1",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-relative-images-v2": "^0.1.5",
-    "gatsby-source-filesystem": "^3.10.0",
-    "gatsby-transformer-remark": "^4.7.0",
-    "gatsby-transformer-sharp": "^3.10.0",
-    "lodash": "^4.17.20",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-remark": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
+    "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.6",
-    "netlify-cms-app": "^2.15.30",
+    "netlify-cms-app": "^2.14.32",
+    "netlify-cms-media-library-cloudinary": "^1.3.10",
+    "netlify-cms-media-library-uploadcare": "^0.5.10",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.1.0",
     "uuid": "^8.3.2"
   },
   "keywords": [
@@ -45,6 +49,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "webpack": "^5.37.0"
+  },
+  "resolutions": {
+    "graphql": "^15.4.0",
+    "graphql-compose": "^7.25.0",
+    "webpack": "^5.24.2"
   }
 }
