--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -31,8 +31,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
-      - run: npm audit fix
+      # - run: npm ci
+      # - run: npm audit fix
+      - run: yarn
       - run: npm run build
 
       - name: Publish
