--- a/package.json
+++ b/package.json
@@ -1,38 +1,36 @@
 {
-  "name": "gatsby-starter-netlify-cms",
+  "name": "oe-japan-cms",
   "description": "Open Education Japan (OE Japan)",
   "version": "1.0.3",
   "author": "Takaya Yamazato",
   "dependencies": {
     "bulma": "^0.9.2",
-    "gatsby": "^3.5.0",
-    "gatsby-image": "^3.1.0",
-    "gatsby-plugin-image": "^1.1.2",
-    "gatsby-plugin-google-analytics": "^3.1.0",
-    "gatsby-plugin-netlify": "^3.1.0",
-    "gatsby-plugin-netlify-cms": "^5.1.0",
+    "gatsby": "^3.11.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^1.11.0",
+    "gatsby-plugin-google-analytics": "^3.11.0",
+    "gatsby-plugin-netlify": "^3.11.0",
+    "gatsby-plugin-netlify-cms": "^5.11.0",
     "gatsby-plugin-purgecss": "^6.0.2",
-    "gatsby-plugin-react-helmet": "^4.1.0",
-    "gatsby-plugin-sass": "^4.1.0",
-    "gatsby-plugin-sharp": "^3.1.2",
-    "gatsby-remark-copy-linked-files": "^4.7.0",
-    "gatsby-remark-images": "^4.1.1",
+    "gatsby-plugin-react-helmet": "^4.11.0",
+    "gatsby-plugin-sass": "^4.11.0",
+    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-remark-copy-linked-files": "^4.8.0",
+    "gatsby-remark-images": "^5.8.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-transformer-remark": "^3.1.0",
-    "gatsby-transformer-sharp": "^3.1.0",
+    "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-transformer-remark": "^4.8.0",
+    "gatsby-transformer-sharp": "^3.11.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.6",
-    "netlify-cms-app": "^2.14.32",
-    "netlify-cms-media-library-cloudinary": "^1.3.10",
-    "netlify-cms-media-library-uploadcare": "^0.5.10",
+    "netlify-cms-app": "^2.15.33",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "sass": "^1.32.13",
-    "sass-loader": "^11.1.0",
+    "sass": "^1.37.5",
+    "sass-loader": "^12.1.0",
     "uuid": "^8.3.2"
   },
   "keywords": [
@@ -43,14 +41,14 @@
   "scripts": {
     "clean": "gatsby clean",
     "start": "npm run develop",
-    "build": "npm run clean && gatsby build",
+    "build": "gatsby clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
     "prettier": "^2.3.2",
-    "webpack": "^5.37.0"
+    "webpack": "^5.48.0"
   },
   "resolutions": {
     "graphql": "^15.4.0",
