--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,7 +22,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x]
+        # node-version: [12.x, 14.x]
+        node-version: latest
 
     steps:
       - uses: actions/checkout@v2
