node-version: [12.x, 14.x] に戻す

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,8 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        # node-version: [12.x, 14.x]
-        node-version: latest
+        node-version: [12.x, 14.x]
 
     steps:
       - uses: actions/checkout@v2
