--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -52,7 +52,8 @@ jobs:
       - name: Rsync deployments to sakura.ne.jp
         uses: burnett01/rsync-deployments@4.1
         with:
-          switches: -avzr --delete --omit-dir-times
+          # switches: -avzr --delete --omit-dir-times
+           switches: -rlOtcv --delete --omit-dir-times
           path: public/
           remote_path: ${{ secrets.REMOTE_PATH }}
           remote_host: ${{ secrets.REMOTE_HOST }}
