--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Rsync deployments to sakura.ne.jp
         uses: burnett01/rsync-deployments@5.2
         with:
-          switches: -avzr --delete --omit-dir-times
-          # switches: -rlOtcv --delete --omit-dir-times
+          # switches: -avzr --delete --omit-dir-times
+          switches: -rlOtcv --delete --omit-dir-times
           path: public/
           remote_path: ${{ secrets.REMOTE_PATH }}
           remote_host: ${{ secrets.REMOTE_HOST }}
