--- a/package.json
+++ b/package.json
@@ -4,33 +4,33 @@
   "version": "1.0.3",
   "author": "Takaya Yamazato",
   "dependencies": {
-    "bulma": "^0.9.2",
-    "gatsby": "^3.12.1",
+    "bulma": "^0.9.3",
+    "gatsby": "^4.8.1",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-image": "^1.12.0",
-    "gatsby-plugin-google-analytics": "^3.12.0",
-    "gatsby-plugin-netlify": "^3.12.0",
-    "gatsby-plugin-netlify-cms": "^5.12.0",
-    "gatsby-plugin-purgecss": "^6.0.2",
-    "gatsby-plugin-react-helmet": "^4.11.0",
-    "gatsby-plugin-sass": "^4.12.0",
-    "gatsby-plugin-sharp": "^3.12.0",
-    "gatsby-remark-copy-linked-files": "^4.9.0",
-    "gatsby-remark-images": "^5.9.0",
+    "gatsby-plugin-image": "^2.8.1",
+    "gatsby-plugin-google-analytics": "^4.8.0",
+    "gatsby-plugin-netlify": "^4.1.0",
+    "gatsby-plugin-netlify-cms": "^6.8.0",
+    "gatsby-plugin-purgecss": "^6.1.0",
+    "gatsby-plugin-react-helmet": "^5.8.0",
+    "gatsby-plugin-sass": "^5.8.0",
+    "gatsby-plugin-sharp": "^4.8.1",
+    "gatsby-remark-copy-linked-files": "^5.8.0",
+    "gatsby-remark-images": "^6.8.1",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-source-filesystem": "^3.12.0",
-    "gatsby-transformer-remark": "^4.9.0",
-    "gatsby-transformer-sharp": "^3.12.0",
+    "gatsby-source-filesystem": "^4.8.1",
+    "gatsby-transformer-remark": "^5.8.1",
+    "gatsby-transformer-sharp": "^4.8.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.6",
-    "netlify-cms-app": "^2.15.39",
-    "node-sass": "^6.0.1",
-    "prop-types": "^15.7.2",
+    "netlify-cms-app": "^2.15.66",
+    "node-sass": "^7.0.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "sass": "^1.38.1",
-    "sass-loader": "^12.1.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "uuid": "^8.3.2"
   },
   "keywords": [
@@ -47,8 +47,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^2.3.2",
-    "webpack": "^5.51.1"
+    "npm-check-updates": "^12.4.0",
+    "prettier": "^2.5.1",
+    "webpack": "^5.69.1"
   },
   "resolutions": {
     "graphql": "^15.4.0",
