yarn から npm run へ変更

--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,7 +34,7 @@ jobs:
       - run: npm audit fix
       # yarn へ変更
       # - run: yarn
-      # - run: npm run build
+      - run: npm run build
 
       - name: Publish using netlify
         uses: netlify/actions/cli@master
