--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,38 +27,6 @@ collections:
       - { label: "Body", name: "body", widget: "markdown" }
       - { label: "Tags", name: "tags", widget: "list" }
 
-  - name: "history"
-    label: "History"
-    folder: "src/pages/history"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - { label: "Template Key", name: "templateKey", widget: "hidden", default: "history-page" }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Heading", name: "heading", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "text" }
-      - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
-      - { label: "Featured Image", name: "featuredimage", widget: image }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Tags", name: "tags", widget: "list" }
-
-  - name: "members"
-    label: "Members"
-    folder: "src/pages/members"
-    create: true
-    slug: "{{slug}}"
-    fields:
-      - { label: "Template Key", name: "templateKey", widget: "hidden", default: "members-page" }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Heading", name: "heading", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "text" }
-      - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
-      - { label: "Featured Image", name: "featuredimage", widget: image }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Tags", name: "tags", widget: "list" }
-
   - name: "pages"
     label: "Pages"
     files:
@@ -94,3 +62,29 @@ collections:
           - { label: "Template Key", name: "templateKey", widget: "hidden", default: "about-page" }
           - { label: "Title", name: "title", widget: "string" }
           - { label: "Body", name: "body", widget: "markdown" }
+      - file: "src/pages/members/index.md"
+        label: "Members"
+        name: "members"
+        fields:
+          - { label: "Template Key", name: "templateKey", widget: "hidden", default: "members-page" }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Heading", name: "heading", widget: "string" }
+          - { label: "Publish Date", name: "date", widget: "datetime" }
+          - { label: "Description", name: "description", widget: "text" }
+          - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
+          - { label: "Featured Image", name: "featuredimage", widget: image }
+          - { label: "Body", name: "body", widget: "markdown" }
+          - { label: "Tags", name: "tags", widget: "list" }
+      - file: "src/pages/history/index.md"
+        label: "History"
+        name: "history"
+        fields:
+          - { label: "Template Key", name: "templateKey", widget: "hidden", default: "history-page" }
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Heading", name: "heading", widget: "string" }
+          - { label: "Publish Date", name: "date", widget: "datetime" }
+          - { label: "Description", name: "description", widget: "text" }
+          - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
+          - { label: "Featured Image", name: "featuredimage", widget: image }
+          - { label: "Body", name: "body", widget: "markdown" }
+          - { label: "Tags", name: "tags", widget: "list" }
