--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -40,10 +40,10 @@ collections:
           - { label: Heading, name: heading, widget: string }
           - { label: Description, name: description, widget: string }
           - { label: "Body", name: "body", widget: "markdown" }
-          - { label: oe, name: OE, fields: [{ label: Image, name: image, widget: image }, { label: Text, name: text, widget: string }] }
-          - { label: oer, name: OER, fields: [{ label: Image, name: image, widget: image }, { label: Text, name: text, widget: string }] }
-          - { label: ocw, name: OCW, fields: [{ label: Image, name: image, widget: image }, { label: Text, name: text, widget: string }] }
-          - { label: moocs, name: MOOCS, fields: [{ label: Image, name: image, widget: image }, { label: Text, name: text, widget: string }] }
+          - { label: OE, name: oe, fields: [{ label: Image, name: image, widget: image }, { label: Text, name: text, widget: string }] }
+          - { label: OER, name: oer, fields: [{ label: Image, name: image, widget: image }, { label: Text, name: text, widget: string }] }
+          - { label: OCW, name: ocw, fields: [{ label: Image, name: image, widget: image }, { label: Text, name: text, widget: string }] }
+          - { label: MOOCS, name: moocs, fields: [{ label: Image, name: image, widget: image }, { label: Text, name: text, widget: string }] }
       - file: "src/pages/about/index.md"
         label: "About"
         name: "about"
