--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -34,7 +34,7 @@ jobs:
       # - run: npm audit fix
       # - run: npm run build
       # yarn へ変更
-      - run: yarn
+      - run: yarn install
       - run: yarn run build
 
       - name: Publish using netlify
@@ -53,7 +53,7 @@ jobs:
       - name: Rsync deployments to sakura.ne.jp
         uses: burnett01/rsync-deployments@5.2.1
         with:
-          switches: -avzr --delete --omit-dir-times
+          switches: -avzr --delete --exclude=".well-known/" --omit-dir-times
           # switches: -rlOtcv --delete --exclude=".well-known/" --omit-dir-times　
           path: public/
           remote_path: ${{ secrets.REMOTE_PATH }}
