--- a/package.json
+++ b/package.json
@@ -5,22 +5,22 @@
   "author": "Takaya Yamazato",
   "dependencies": {
     "bulma": "^0.9.4",
-    "gatsby": "^5.10.0",
+    "gatsby": "^5.11.0",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-image": "^3.10.0",
-    "gatsby-plugin-google-analytics": "^5.10.0",
+    "gatsby-plugin-image": "^3.11.0",
+    "gatsby-plugin-google-analytics": "^5.11.0",
     "gatsby-plugin-netlify": "^5.1.0",
-    "gatsby-plugin-netlify-cms": "^7.10.0",
+    "gatsby-plugin-netlify-cms": "^7.11.0",
     "gatsby-plugin-purgecss": "^6.2.1",
-    "gatsby-plugin-react-helmet": "^6.10.0",
-    "gatsby-plugin-sass": "^6.10.0",
-    "gatsby-plugin-sharp": "^5.10.0",
-    "gatsby-remark-copy-linked-files": "^6.10.0",
-    "gatsby-remark-images": "^7.10.0",
+    "gatsby-plugin-react-helmet": "^6.11.0",
+    "gatsby-plugin-sass": "^6.11.0",
+    "gatsby-plugin-sharp": "^5.11.0",
+    "gatsby-remark-copy-linked-files": "^6.11.0",
+    "gatsby-remark-images": "^7.11.0",
     "gatsby-remark-relative-images": "^2.0.5",
-    "gatsby-source-filesystem": "^5.10.0",
-    "gatsby-transformer-remark": "^6.10.0",
-    "gatsby-transformer-sharp": "^5.10.0",
+    "gatsby-source-filesystem": "^5.11.0",
+    "gatsby-transformer-remark": "^6.11.0",
+    "gatsby-transformer-sharp": "^5.11.0",
     "lodash": "^4.17.21",
     "lodash-webpack-plugin": "^0.11.6",
     "netlify-cms-app": "^2.15.72",
@@ -29,7 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "sass": "^1.63.3",
+    "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "uuid": "^9.0.0"
   },
@@ -44,12 +44,12 @@
     "build": "gatsby clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
-    "package update": "ncu -u && rm -rf node_modules yarn.lock && yarn install"
+    "package update": "ncu -u && rm -rf node_modules yarn.lock && yarn install && yarn build"
   },
   "devDependencies": {
-    "npm-check-updates": "^16.10.12",
-    "prettier": "^2.8.8",
-    "webpack": "^5.86.0"
+    "npm-check-updates": "^16.10.15",
+    "prettier": "^3.0.0",
+    "webpack": "^5.88.1"
   },
   "resolutions": {
     "graphql": "^15.4.0",
