--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "build": "gatsby clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
-    "package update": "ncu -u && rm -rf node_modules yarn.lock && yarn install && yarn build"
+    "package update": "ncu -u && rm -rf node_modules yarn.lock && yarn install && yarn run build"
   },
   "devDependencies": {
     "npm-check-updates": "^16.10.18",
