--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,7 +22,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [19.x]
+        node-version: 'latest'
 
     steps:
       - uses: actions/checkout@v3
