--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -30,12 +30,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      # - run: npm ci
-      # - run: npm audit fix
-      # - run: npm run build
+          - run: npm install
+          - run: npm run build
       # yarn へ変更
-      - run: yarn install
-      - run: yarn run build
+      # - run: yarn install
+      # - run: yarn run build
 
       - name: Publish using netlify
         uses: netlify/actions/cli@master
