--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -18,20 +18,23 @@ on:
 
 jobs:
   build:
+    # ubunts の最新版を指定
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [20.x]
-
+    
+    # 実行する処理やコマンドを指定
     steps:
-      - uses: actions/checkout@v3
+      # レポジトリからの checkout を実行
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          - run: npm install
-          - run: npm run build
+          cache: "npm"
+      # Node の実行（npm install, npm run build）
+      - name: Build Project
+        run: |
+          npm install
+          npm run build
       # yarn へ変更
       # - run: yarn install
       # - run: yarn run build
