--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -20,15 +20,16 @@ jobs:
   build:
     # ubunts の最新版を指定
     runs-on: ubuntu-latest
-    
+
     # 実行する処理やコマンドを指定
     steps:
       # レポジトリからの checkout を実行
       - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
+      # Node のセットアップ
+      - name: Use Node.js latest
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: "latest"
           cache: "npm"
       # Node の実行（npm install, npm run build）
       - name: Build Project
