--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -40,13 +40,13 @@ jobs:
       # - run: yarn install
       # - run: yarn run build
 
-      - name: Publish using netlify
-        uses: netlify/actions/cli@master
-        with:
-          args: deploy --dir=public --prod
-        env:
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      # - name: Publish using netlify
+      #   uses: netlify/actions/cli@master
+      #   with:
+      #     args: deploy --dir=public --prod
+      #   env:
+      #     NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      #     NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
 
       # 確認のためのリスト表示　必要なければ削除
       - name: List output files
