--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Use Node.js latest
         uses: actions/setup-node@v4
         with:
-          node-version: "latest"
+          # node-version: "latest"
+          node-version-file: 'package.json'
           cache: "npm"
       # Node の実行（npm install, npm run build）
       - name: Build Project
