--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -26,7 +26,7 @@ jobs:
       # レポジトリからの checkout を実行
       - uses: actions/checkout@v4
       # Node のセットアップ
-      - name: Use Node.js latest
+      - name: Use Node.js
         uses: actions/setup-node@v4
         with:
           # node-version: "latest"
