--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "bulma": "^1.0.3",
     "gatsby": "^5.14.1",
     "gatsby-image": "^3.11.0",
-    "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-google-analytics": "^5.14.0",
+    "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-purgecss": "^6.2.1",
     "gatsby-plugin-react-helmet": "^6.14.0",
     "gatsby-plugin-sass": "^6.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
     "gatsby-remark-copy-linked-files": "^6.14.0",
     "gatsby-remark-images": "^7.14.0",
     "gatsby-remark-relative-images": "^2.0.5",
@@ -50,5 +51,4 @@
   "engines": {
     "node": ">= 20.18.0"
   }
-
 }
