--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "oe-japan-cms",
   "description": "Open Education Japan (OE Japan)",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": "Takaya Yamazato",
   "dependencies": {
     "bulma": "^1.0.3",
     "gatsby": "^5.14.1",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-canonical-urls": "^5.14.0",
     "gatsby-plugin-google-analytics": "^5.14.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-purgecss": "^6.2.1",
@@ -27,7 +28,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
-    "sass": "^1.83.1",
+    "sass": "^1.83.4",
     "sass-loader": "^16.0.4",
     "uuid": "^11.0.5"
   },
@@ -42,7 +43,7 @@
     "build": "gatsby clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
-    "yarn package update": "ncu -u && rm -rf node_modules yarn.lock package.lock && yarn install && yarn run build",
+    "package update w/o ncu -u": "rm -rf node_modules yarn.lock package.lock && npm install && npm run build",
     "npm package update": "ncu -u && rm -rf node_modules yarn.lock package.lock && npm install && npm run build"
   },
   "devDependencies": {
