--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,13 +24,14 @@ jobs:
     # 実行する処理やコマンドを指定
     steps:
       # レポジトリからの checkout を実行
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       # Node のセットアップ
       - name: Use Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
           # node-version: "latest"
-          node-version-file: 'package.json'
+          # node-version-file: 'package.json'
+          node-version: '22.14.x'
           cache: "npm"
       # Node の実行（npm install, npm run build）
       - name: Build Project
